syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartparking.grpc";
option java_outer_classname = "FinanceSystemServiceImpl";
package ParkingSystem;

service Finance{

  //Adiciona no ticket o valor
  rpc payment(Ticket) returns (Ticket) { }

  //Gravar hist√≥rico de carro de ticket do valor
  rpc addCarToPaymentRecord(Ticket) returns (Status) { }

  //Devolver relatorio quantitativo do dia
  rpc PaymentRecordReport(Empety) returns (FinanceDay) { }

  //fechar caixa
  rpc closure(Empety) returns (FinanceDay) { }

  //Abrir caixa
  rpc open(Parking) returns (Status) { }

}
message Status{
  string status = 1;
}

message Empety{
}

message Parking{
  string vancancyQuantity = 1;
  string openingCashValue = 2;
}

message FinanceDay{
  string CarQuantity = 1;
  string amount = 2;
  string msgErro = 3;
}

message Ticket{
  string idTicket = 1;
  string licensePlate = 2;
  string checkin = 3;
  string checkout = 4;
  string price = 5;
  string msgErro = 6;
}