syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.smartparking.grpc";
option java_outer_classname = "VancancyManagementServiceImpl";
package ParkingSystem;


service VancancyManagement {

  //Informa que esta ocupando uma vaga
  rpc vancancyCheckIn(CarEntrance) returns (Ticket) {}

  //Informa que esta desocupando uma vaga
  rpc vancancyCheckOut(TicketRequestCheckout) returns (Ticket) {}

  //Informa se nao ha vaga no estacionamento
  rpc vancancyCheckIfItIsFull(Empety) returns (Status) {}

  //closure parking
  rpc closure(Empety) returns (Status) { }

  //open parking
  rpc open(Empety) returns (Status) { }
}

message Ticket{
  string idTicket = 1;
  string licensePlate = 2;
  string checkin = 3;
  string checkout = 4;
  string price = 5;
  string msgErro = 6;
}

message Empety{
}

message Status{
  string status = 1;
}

message CarEntrance{
  string licensePlate = 1;
}

message TicketRequestCheckout{
  string idTicket = 1;
}

message empty{

}

